name:                vindinium
version:             0.1.0.0
synopsis:            Bot for vindinium.org based off https://github.com/Herzult/vindinium-starter-haskell
homepage:            https://github.com/splondike/
license:             MIT
license-file:        LICENSE
author:              Stefan Schneider
maintainer:          code@stefansk.name
build-type:          Simple
cabal-version:       >=1.10

executable vindinium
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >=4.6
                  , mtl
                  , transformers
                  , text
                  , random
                  , aeson
                  , HTTP
                  , http-types
                  , http-client
                  , optparse-applicative >= 0.11.0
                  , astar
                  , hashable
                  , unordered-containers
                  , containers
                  , transformers
  other-modules:    Bot,
                    BotHelper,
                    Vindinium,
                    Vindinium.Api,
                    Vindinium.Play,
                    Vindinium.Types
