name:                vindinium
version:             0.1.0.0
synopsis:            Bot for vindinium.org based off https://github.com/Herzult/vindinium-starter-haskell
homepage:            https://github.com/splondike/
license:             MIT
license-file:        LICENSE
author:              Stefan Schneider
maintainer:          code@stefansk.name
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base
                  , mtl
                  , transformers
                  , text
                  , random
                  , aeson
                  , HTTP
                  , http-types
                  , http-client
                  , astar
                  , hashable
                  , unordered-containers
                  , containers
                  , transformers
  exposed-modules:  BooleanBot,
                    FuzzyBot,
                    BotHelper,
                    Vindinium,
                    Vindinium.Types
  other-modules:    Fuzzy
                    Vindinium.Api,
                    Vindinium.Play

executable vindinium
  main-is:          Main.hs
  hs-source-dirs:   src-vindinium-bot
  default-language: Haskell2010
  build-depends:    base
                  , vindinium
                  , optparse-applicative >= 0.11.0
                  , text

executable vindinium-profile
  main-is:          Main.hs
  hs-source-dirs:   src-vindinium-profile
  default-language: Haskell2010
  ghc-options:      -fprof-auto
  build-depends:    base
                  , mtl
                  , transformers
                  , vindinium
                  , criterion
